--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <br/>
     <center>
         <h2 id="check-circle-fill" class="alert alert-dark fade show" role="alert" style="color: rgba(97,120,140,255); margin-bottom: none; width: fit-content;">
-            Homepage for Flask Core Assignment
+            Homepage for Flask Blog Assignment
         </h2>
     </center>
 
