created about link, page, and test

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
     <br/>
     <center>
         <h2 id="check-circle-fill" class="alert alert-dark fade show" role="alert" style="color: rgba(97,120,140,255); margin-bottom: none; width: fit-content;">
-            Homepage for Flask Blog Assignment
+            About Page for Flask Blog
         </h2>
     </center>
 
