--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-    <br/>
     <center>
-        <h2 id="check-circle-fill" class="alert alert-dark fade show" role="alert" style="color: rgba(97,120,140,255); margin-bottom: none; width: fit-content;">
+        <h2 id="check-circle-fill" class="alert alert-dark fade show" role="alert" style="color: rgba(97,120,140,255); margin-bottom: none;">
             About Page for Flask Blog
         </h2>
     </center>
