added users and blogs

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,11 +1,33 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <center>
-        <h2 id="check-circle-fill" class="alert alert-dark fade show" role="alert" style="color: rgba(97,120,140,255); margin-bottom: none;">
-            About Page for Flask Blog
-        </h2>
-    </center>
+
+
+
+<div class="border container shadow p-4" style="background-color: white;">
+
+    <div>
+
+        <h2 style="border-bottom: 1px solid black;">About Blogs</h2>
+    </div>
+    <br/>
+    <div class="border container shadow p-3" style="background-color: white;">
+            <h3 style="margin-top: 0;">blog</h3>
+            <p>/bläɡ/</p>
+            <p><strong>noun</strong></p>
+            <p><em>plural noun: blogs</em></p>
+            <p>a regularly updated website or web page, typically one run by an individual or small group, that is written in an informal or conversational style.</p>
+            <p><strong>verb</strong></p>
+            <p>3rd person present: blogs</p>
+            <p>add new material to or regularly update a blog.</p>
+            <p>"it's about a week since I last blogged"</p>
+            <p>write about (an event, situation, topic, etc.) in a blog.</p>
+            <p>"Patrick blogged the background to the video game release, and the story quickly went viral"</p>
+    </div>
+
+</div>
+<br/>
+<br/>
 
 
 {% endblock %}
