--- a/templates/admin.html
+++ b/templates/admin.html
@@ -24,6 +24,12 @@
         </div>
 
     {% else %}
+        {% for message in get_flashed_messages() %}
+                <div class="alert alert-warning alert-dismissible fade show" role="alert" style="width: fit-content;">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+        {% endfor %}
 
         <style>
             .table td,
