--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -22,13 +22,10 @@
         <a class="nav-link active" aria-current="page" style="color: rgba(97, 120, 140, 255);" href="{{url_for('create_blog')}}">Create Blog</a>
     </div>
     <div class="p-3 highlight-on-hover inner-div">
-        <a class="nav-link active" aria-current="page" style="color: rgba(97, 120, 140, 255);" href="{{url_for('index')}}">View My Blogs</a>
+        <a class="nav-link active" aria-current="page" style="color: rgba(97, 120, 140, 255);" href="{{url_for('latest_blogs')}}">Latest Blogs</a>
     </div>
     <div class="p-3 highlight-on-hover inner-div">
-        <a class="nav-link active" aria-current="page" style="color: rgba(97, 120, 140, 255);" href="{{url_for('index')}}">Edit My Blogs</a>
-    </div>
-    <div class="p-3 highlight-on-hover inner-div">
-        <a class="nav-link active" aria-current="page" style="color: rgba(97, 120, 140, 255);" href="{{url_for('index')}}">Latest Blogs</a>
+        <a class="nav-link active" aria-current="page" style="color: rgba(97, 120, 140, 255);" href="https://waheed816.github.io/" target="_blank">About the Developer</a>
     </div>
     {% if current_user.is_authenticated and current_user.username == 'admin' %}
         <div class="p-3 highlight-on-hover inner-div">
